cmake_minimum_required(VERSION 3.13)
project(AssignmentTwo)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(AssignmentTwo
        62951718-questionFour.cpp
        62951718-questionOne.cpp
        62951718-questionOne.h
        main.cpp 62951718-questionFive.cpp 62951718-questionFive.h)
